src/js/components/project-view/branch-summary.scss
.branch {
  padding: 30px 36px 28px 32px;
  background: #FFFFFF;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.05);
  border-radius: 3px;
  margin-bottom: 18px;
}

.branch:last-child {
  margin-bottom: 0;
}

.hover {
  :global {
    & .commit-message::after {
      color: #919D9F;
      transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
      font-family: "FontAwesome";
      font-size: 13px;
      content: "\f08e";
      opacity: 0;
      padding-left: 10px;
    }
  }
}

.hover:hover {
  :global {
    & .commit-message::after {
      opacity: 1;
    }
  }
}


.header {
  display: flex;
  margin-bottom: 12px;
}

.title {
  font-size: 21px;
  color: #2c3e50;
}

.description {
  font-size: 14px;
  line-height: 1.71;
  color: #4a4a4a;
}

.line {
  color: #f0f0f0;
  background-color: #f0f0f0;
  height: 1px;
  font-size: 0;
  border: 0;
  margin: 20px 0 23px 0;
}

